# github-freertos-coral-swimmer

./: .gitignore  CMakeLists.txt  README.md  main_cm7.cc
py/: coral_swimmer.py  requirements.txt
src/: ArduProf.h  LibDef.h  LibLog.h
src/app/: AppContext.h  AppEvent.h
src/app/ml/: InferenceFactory.cpp  InferenceFactory.h
src/app/peripheral/i2c/: I2cCommand.h  I2cDevice.h  I2cParam.h  I2cResponse.h
src/app/rpc/: RpcServer.cpp  RpcServer.h  StringUtil.h
src/app/thread/: QueueMain.cpp  QueueMain.h  QueueMainM7.cpp  QueueMainM7.h  ThreadInference.cpp  ThreadInference.h  ThreadReporter.cpp  ThreadReporter.h
src/app/type/: CameraImage.h  InferenceResult.h  Lane.h  Swimmer.h  SwimmingPool.h
src/base/ipc/: IpcCoreM4.h  IpcCoreM7.h
src/base/os/freertos/: MessageQueue.h
src/base/os/freertos/thread/: ThreadBase.h
src/base/peripheral/: PeriodicTimer.h
src/base/type/: Message.h
src/base/util/: FsUtil.h
